feat: expand operational management center
